# HolyEnergyWeeklyConnection

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker.yml
src/holy_energy_weekly_connection/: __init__.py  __main__.py  client.py  exceptions.py  models.py
