[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holy-energy-weekly-connection"
version = "0.1.0"
description = "Automates the weekly login to fr.holy.com to earn HOLY Coins loyalty points."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.scripts]
holy-connect = "holy_energy_weekly_connection.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff: linter + formatter ---
[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["holy_energy_weekly_connection"]

# --- Mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
